--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1335,6 +1335,11 @@ button:focus-within{
 	transform: translateX(-25px); 
 }
 
+.beta_banner {
+	position: relative;
+	z-index: 999;
+}
+
 .beta_banner h2 {
 	font-family: 'MALDINI';
 	font-size: 210px;
@@ -1342,7 +1347,7 @@ button:focus-within{
 	letter-spacing: 0.04em;
 	text-align: center;
 	color: #fff;
-	text-shadow: 6px 16px 7px #dfdfdf;
+	text-shadow: 6px 16px 7px #5b5b5b;
 }
 
 .beta_banner h3 {
@@ -1405,14 +1410,14 @@ button:focus-within{
 
 .beta_shape_1 {
 	position: absolute;
-	bottom: -50px;
+	top: 0;
 	left: 0;
 	width: 488px;
 }
 
 .beta_shape_2 {
 	position: absolute;
-	bottom: -50px;
+	top: 0;
 	right: 0;
 	width: 437px;
 }
@@ -1485,18 +1490,101 @@ button:focus-within{
 .alpha_shape_1 img {
 	width: 100%;
 }
+
+.alpha_shape_2 {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	top: 0;
+	margin: auto;
+	width: 50%;
+	height: 728px;
+}
+
+.alpha_shape_2 img {
+	width: 100%;
+}
+
 .alpha_roadmap {
 	position: absolute;
-	bottom: 105px;
-	right: 0;
+	bottom: 80px;
+	right: -149px;
 	left: 0;
 	margin: auto;
 	width: 274px;
 	height: 129px;
 }
 
+.alpha_roadmap_2 {
+	position: absolute;
+	bottom: 105px;
+	right: 225px;
+	left: 0;
+	margin: auto;
+	width: 274px;
+	height: 129px;
+}
+
+.alpha_roadmap_2 img,
 .alpha_shape_1 img {
 	width: 100%;
+}
+
+.beta_alpha_position{
+	position: relative;
+	z-index: 99;
+}
+
+.cron_img_area img{
+	width: 100%;
+}
+
+.beta_banner_imgg{
+	position: relative;
+}
+
+.beta_banner_content_img{
+	position: relative;
+	z-index: 99;
+}
+
+.footer_change {
+	margin-bottom: 118px;
+	width: 100%;
+	max-width: 942px;
+	text-align: center;
+	margin: 0 auto 118px auto;
+}
+
+.footer_change
+.become_btn { 
+	justify-content: center;
+}
+
+.footer_change
+.become_left h3 { 
+	width: 100%; 
+	margin: 0 auto;
+}
+
+.footer_beta{
+	position: relative;
+}
+
+.footer_area{
+	position: relative;
+	z-index: 9999;
+}
+
+.footer_beta::after {
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 1134px;
+	z-index: 9;
+	bottom: 0;
+	left: 0;
+	background: url(../images/beta/cron/shape.png) no-repeat scroll center center / 100% 100%;
 }
 
 
